--- a/index.html
+++ b/index.html
@@ -1,123 +1,159 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <!-- fontawsome -->
-  <script src="https://kit.fontawesome.com/a6a51c5f3f.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>YHS</title>
+
   <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700,900|Ubuntu:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,900|Montserrat:300,400,900&display=swap" rel="stylesheet">
+
   <!-- bootstrap css -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <!-- personal css -->
-  <link rel="stylesheet" href="css/master.css">
-  <!-- bootstrap script -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- customizing css -->
+  <link rel="stylesheet" href="styles.css">
+  <!-- font awsome -->
+  <script src="https://kit.fontawesome.com/131cbe9f89.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
+  <!-- header -->
+  <main>
+    <header>
+      <section id="title" class="container-fluid">
 
-  <section id="title">
-    <div class="container-fluid">
+        <!-- Nav Bar -->
+        <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark">
+          <a class="navbar-brand">HyunSooYoo</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#pricing">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#cta">Download</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#footer">Contact</a>
+              </li>
 
-      <!-- title section -->
+            </ul>
 
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">tindog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+          </div>
+        </nav>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#footer">Contact</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#pricing">Pricing</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#cta">Download</a>
-            </li>
-          </ul>
+
+
+        <!-- Title -->
+
+
+
+        <div class="row">
+
+
+          <article class="col-lg-6 col-md-6">
+            <h1 class="main-heading">Meet new and interesting person nearby.</h1>
+            <button class="main-download_button btn btn-md btn-dark" type="button"><i class="fab fa-instagram"></i> Download</button>
+            <button class="main-download_button btn btn-md btn-outline-light" type="button"><i class="fab fa-twitter"></i> Download</button>
+          </article>
+          <figure class="col-lg-6 col-md-6">
+            <img class="main-image" src="images/hs.jpg" alt="iphone-mockup">
+          </figure>
         </div>
-      </nav>
+    </header>
 
-
-
-      <!-- Title -->
-      <div class="row">
-
-
-        <div class="col-lg-6">
-          <h1 class="biggest-heading">Meet new and interesting dogs nearby.</h1>
-          <button class="ftitle-button btn btn-dark btn-lg" type="button"><i class="fab fa-apple"></i> Download</button>
-          <button class="stitle-button btn btn-outline-light btn-lg" type="button"><i class="fab fa-google-play"></i> Download</button>
-        </div>
-        <div class="col-lg-6">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
-        </div>
-      </div>
-    </div>
-  </section>
-
-
+    </section>
+  </main>
   <!-- Features -->
 
+
+
   <section id="features">
+
     <div class="row">
 
-      <div class="col-lg-4">
-
-
-        <i class="features-icon fas fa-check-circle fa-3x"></i>
-        <h3 class="features-title">Easy to use.</h3>
+      <article class="col-lg-4 col-md-4">
+        <i class="far fa-check-circle  fa-2x"></i>
+        <h3>Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="col-lg-4">
+      </article>
 
+      <article class="col-lg-4 col-md-4">
+        <i class="fas fa-bullseye fa-2x"></i>
 
-        <i class="features-icon fas fa-bullseye fa-3x"></i>
-        <h3 class="features-title">Elite Clientele</h3>
+        <h3>Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="col-lg-4">
+      </article>
 
+      <article class="col-lg-4 col-md-4">
+        <i class="fas fa-heart fa-2x"></i></span>
 
-        <i class="features-icon fas fa-heart fa-3x"></i>
-        <h3 class="features-title">Guaranteed to work.</h3>
+        <h3>Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
-      </div>
+      </article>
+
     </div>
+
   </section>
 
 
   <!-- Testimonials -->
-
   <section id="testimonials">
 
-    <div id="carouselTestimonialControls" class="carousel slide" data-ride="carousel" data-interval="2000">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="false">
+
       <div class="carousel-inner">
+
         <div class="carousel-item active">
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-          <em>Pebbles, New York</em>
+
+          <article>
+            <header>
+              <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            </header>
+            <figure>
+              <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+            </figure>
+            <footer>
+              <figcaption><em>Pebbles, New York</em></figcaption>
+
+            </footer>
+          </article>
+
         </div>
+
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.
-          </h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
+
+          <article>
+            <header>
+              <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            </header>
+            <figure>
+              <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+            </figure>
+            <footer>
+              <figcaption><em>Beverly, Illinois</em></figcaption>
+
+            </footer>
+          </article>
+
         </div>
 
       </div>
 
-    </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
 
+    </div>
 
   </section>
 
@@ -125,93 +161,98 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <figure>
+      <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
+    </figure>
+    <figure>
+      <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
+    </figure>
+    <figure>
+      <img class="press-image" src="images/tnw.png" alt="tnw-logo">
+    </figure>
+    <figure>
+      <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
+    </figure>
+    <figure>
+      <img class="press-image" src="images/mashable.png" alt="mashable-logo">
+    </figure>
+
+
 
   </section>
 
 
   <!-- Pricing -->
 
-  <section id="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
 
 
-    <div class="row">
-      <div class="col-lg-4 col-md-6">
+<section id="pricing">
 
 
-
-      <div class="card">
-
-
-        <div class="card-header">
-          <h3>Chihuahua</h3>
-        </div>
-        <div class="card-body">
-          <h2>Free</h2>
-          <p>5 Matches Per Day</p>
-          <p>10 Messages Per Day</p>
-          <p>Unlimited App Usage</p>
-        </div>
-        <div class="card-footer">
-
-          <button class="btn btn-outline-dark btn-lg btn-block" type="button">Sign Up</button>
-
-        </div>
-      </div>
-        </div>
-       <div class="col-lg-4 col-md-6">
+      <header>
+        <h2 class="pricing-heading">A Plan for Every Dog's Needs</h2>
+      </header>
+      </article>
+      <p class="pricing-text">Simple and affordable price plans for your and your dog.</p>
+      </article>
+  <div class="row">
+  <div class="col-lg-4 col-md-4">
 
 
-      <div class="card">
+    <div class="card text-center">
+      <header class="card-header">
+        <h3>Chihuahua</h3>
+      </header>
+      <article class="card-body">
+        <h2 class="card-title">Free</h2>
+        <p class="card-text">5 Matches Per Day</p>
+        <p class="card-text">10 Messages Per Day</p>
+        <p class="card-text">Unlimited App Usage</p>
 
-
-        <div class="card-header">
-          <h3>Labrador</h3>
-        </div>
-        <div class="card-body">
-          <h2>$49</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
-        </div>
-      </div>
-         </div>
-         <div class="col-lg-4">
-
-
-      <div class="card">
-
-
-        <div class="card-header">
-          <h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
-          <h2>$99</h2>
-          <p>Pirority Listing</p>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-        </div>
-        <div class="card-footer">
-
-          <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
-        </div>
-      </div>
-       </div>
+      </article>
+      <footer>
+        <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+      </footer>
     </div>
+  </div>
 
+  <div class="col-lg-4 col-md-4">
+    <div class="card text-center">
+      <header class="card-header">
+        <h3>Labrador</h3>
+      </header>
+      <article class="card-body">
+        <h2 class="card-title">$49 / mo</h2>
+        <p class="card-text">Unlimited Matches</p>
+        <p class="card-text">Unlimited Messages</p>
+        <p class="card-text">Unlimited App Usage</p>
 
+      </article>
+      <footer>
+        <button type="button" class="btn-dark btn btn-block">Sign Up</button>
+      </footer>
+    </div>
+  </div>
 
+  <div class="col-lg-4 col-md-4">
+    <div class="card text-center">
+      <header class="card-header">
+        <h3>Mastiff</h3>
+      </header>
+      <article class="card-body">
+        <h2 class="card-title">$99 / mo</h2>
+        <p class="card-text">Pirority Listing</p>
+        <p class="card-text">Unlimited Listing</p>
+        <p class="card-text">Unlimited Matches</p>
+        <p class="card-text">Unlimited App Usage</p>
 
+      </article>
+      <footer>
+        <button type="button" class="btn btn-dark  btn-block">Sign Up</button>
+      </footer>
+    </div>
+  </div>
+</div>
 
 
 
@@ -221,25 +262,35 @@
   <!-- Call to Action -->
 
   <section id="cta">
+    <article class="">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button class="btn btn-dark" type="button"><i class="fab fa-apple"></i> Download</button>
-    <button class="btn btn-light" type="button"><i class="fab fa-google-play"></i> Download</button>
+    <header>
+        <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    </header>
+     <section>
+       <button class="btn btn-lg btn-dark" type="button"><i class="fab fa-instagram"></i> Download</button>
+       <button class="btn btn-lg btn-outline-light"type="button"><i class="fab fa-twitter"></i> Download</button>
+     </section>
 
+    </article>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
+       <i class="fab fa-twitter"></i>
+       <i class="fab fa-facebook-f"></i>
+       <i class="fab fa-instagram"></i>
+       <i class="fas fa-envelope"></i>
+       <p>© Copyright 2018 TinDog</p>
 
 
-    <i class="fab fa-twitter"></i>
-    <i class="fab fa-facebook-f"></i>
-    <i class="fab fa-instagram"></i>
-    <i class="fas fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
   </footer>
-
-
+  <!-- bootstrap js -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
+</html>
